--- a/index.html
+++ b/index.html
@@ -4,10 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fragebögen - Care4Skin</title>
+    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/frageboegen.css">
 </head>
 <body>
+    <!-- Header -->
+    <header>
+        <div class="logo">Care4Skin</div>
+        <nav>
+            <a href="Startseite.html">Startseite</a>
+            <a href="frageboegen.html">Fragebögen</a>
+            <a href="Startseite.html">Impressum</a>
+        </nav>
+    </header>
+
+    <!-- Hauptinhalt -->
+    <main>
+        <div class="frageboegen-container">
+            <h2>Wähle deinen Fragebogen</h2>
+            <p>Beantworte ein paar Fragen und erhalte personalisierte Hautpflege-Empfehlungen</p>
+
+            <div class="frageboegen-auswahl">
+                <!-- Hauttyp Test -->
+                <div class="fragebogen-karte">
+                    <h3>Hauttyp Analyse</h3>
+                    <p>Finde heraus, welcher Hauttyp du bist und erhalte passende Pflegeempfehlungen.</p>
+                    <button onclick="location.href='frageboegen.html'">Hauttyp Test starten</button>
+                </div>
+
+                <!-- Hautprobleme Test -->
+                <div class="fragebogen-karte">
+                    <h3>Hautprobleme & Prävention</h3>
+                    <p>Erhalte Tipps bei Hautproblemen und lerne, wie du vorbeugen kannst.</p>
+                    <button onclick="location.href='frageboegen.html'">Hautprobleme Test starten</button>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Care4Skin | <a href="Startseite.html">Datenschutz</a></p>
+    </footer>
+
+    <!-- JS -->
     <script src="js/frageboegen.js"></script>
 </body>
 </html>
