--- a/index.html
+++ b/index.html
@@ -1,48 +1,31 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fragebögen - Care4Skin</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/frageboegen.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Care4Skin</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/frageboegen.css">
 </head>
 <body>
-    <header>
-        <div class="logo">Care4Skin</div>
-        <nav>
-            <a href="Startseite.html">Startseite</a>
-            <a href="frageboegen.html">Fragebögen</a>
-            <a href="Startseite.html">Impressum</a>
-        </nav>
-    </header>
+  <header>
+    <div class="logo">Care4Skin</div>
+    <nav>
+      <a href="index.html">Startseite</a>
+      <a href="frageboegen.html">Fragebögen</a>
+      <a href="impressum.html">Impressum</a>
+    </nav>
+  </header>
 
-    <main>
-        <div class="frageboegen-container">
-            <h2>Wähle deinen Fragebogen</h2>
-            <p>Beantworte ein paar Fragen und erhalte personalisierte Hautpflege-Empfehlungen</p>
+  <main id="content">
+    <h1>Willkommen bei Care4Skin</h1>
+    <p>Hier kommt der Startseiten-Inhalt.</p>
+  </main>
 
-            <div class="frageboegen-auswahl">
-                <div class="fragebogen-karte hauttyp">
-                    <h3>Hauttyp Analyse</h3>
-                    <p>Finde heraus welcher Hauttyp du bist und erhalte passende Pflegeempfehlungen.</p>
-                    <button onclick="location.href='frageboegen.html'">Hauttyp Test starten</button>
-                </div>
+  <footer>
+    <p>&copy; 2025 Care4Skin | <a href="datenschutz.html">Datenschutz</a></p>
+  </footer>
 
-                <div class="fragebogen-karte hautkrankheiten">
-                    <h3>Hautprobleme & Prävention</h3>
-                    <p>Erhalte Tipps bei Hautproblemen und lerne wie du vorbeugen kannst.</p>
-                    <button onclick="location.href='frageboegen.html'">Hautprobleme Test starten</button>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 Care4Skin | <a href="Startseite.html">Datenschutz</a></p>
-    </footer>
-
-    <!-- JS nur wenn nötig -->
-    <!-- <script src="js/frageboegen.js"></script> -->
+  <script src="js/frageboegen.js"></script>
 </body>
 </html>
