--- a/frageboegen.html
+++ b/frageboegen.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fragebögen - Care4Skin</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/frageboegen.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/frageboegen.css">
 </head>
 <body>
     <header>
