--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Fragebögen - Care4Skin</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/frageboegen.css">
+    <script src="js/frageboegen.js"></script>
+    
 </head>
 <body>
     <header>
