--- a/frageboegen.html
+++ b/frageboegen.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fragebögen - Care4Skin</title>
   <!-- CSS -->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/frageboegen.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="frageboegen.css">
 </head>
 <body>
   <!-- Header -->
@@ -51,6 +51,6 @@
   </footer>
 
   <!-- JS -->
-  <script src="js/frageboegen.js"></script>
+  <script src="frageboegen.js"></script>
 </body>
 </html>
