--- a/frageboegen.html
+++ b/frageboegen.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fragebögen - Care4Skin</title>
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="frageboegen.css">
+  <title>Hauttyp Analyse - Care4Skin</title>
+  <link rel="stylesheet" href="css\style.css">
+  <link rel="stylesheet" href="css\frageboegen.css">
 </head>
 <body>
-  <!-- Header -->
   <header>
     <div class="logo">Care4Skin</div>
     <nav>
@@ -19,38 +17,31 @@
     </nav>
   </header>
 
-  <!-- Hauptinhalt -->
-  <main id="main">
+  <main>
     <div class="frageboegen-container">
-      <h2>Wähle deinen Fragebogen</h2>
-      <p>Beantworte einige Fragen und erhalte personalisierte Hautpflege-Empfehlungen</p>
+      <h2>Hauttyp Analyse</h2>
+      <p>Beantworte ein paar Fragen und erhalte personalisierte Hautpflege-Empfehlungen</p>
 
-      <div class="frageboegen-auswahl">
-        <!-- Hauttyp Test -->
-        <div class="fragebogen-karte hauttyp">
-          <h3>Hauttyp Analyse</h3>
-          <p>Finde heraus welcher Hauttyp du bist und erhalte passende Pflegeempfehlungen.</p>
-          <p><strong>6 Fragen</strong> • Dauer: 3-5 Minuten</p>
-          <button onclick="location.href='hauttyp-fragebogen.html'">Hauttyp Test starten</button>
-        </div>
+      <!-- Start-Button -->
+      <button id="startButton" class="fragebogen-button">Fragen anzeigen</button>
 
-        <!-- Hautprobleme Test -->
-        <div class="fragebogen-karte hautkrankheiten">
-          <h3>Hautprobleme & Prävention</h3>
-          <p>Erhalte Tipps bei Hautproblemen und lerne wie du vorbeugen kannst.</p>
-          <p><strong>6 Fragen</strong> • Dauer: 3-5 Minuten</p>
-          <button onclick="location.href='hautprobleme-fragebogen.html'">Hautprobleme Test starten</button>
-        </div>
-      </div>
+      <!-- Fragenformular -->
+      <form id="fragebogenForm" style="display:none;">
+        <div id="fragebogen"></div>
+        <button type="button" id="submitButton" class="fragebogen-button">Ergebnis anzeigen</button>
+        
+      </form>
+
+      <!-- Ergebnis -->
+      <div id="ergebnis" style="margin-top:20px;"></div>
     </div>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Care4Skin | <a href="impressum.html">Impressum</a></p>
   </footer>
 
-  <!-- JS -->
-  <script src="frageboegen.js"></script>
+  <!-- JS am Ende laden -->
+  <script src="js/frageboegen.js"></script>
 </body>
 </html>
