Fix stylesheet link paths and clean up form structure in frageboegen.html

--- a/html/frageboegen.html
+++ b/html/frageboegen.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hauttyp Analyse - Care4Skin</title>
-  <link rel="stylesheet" href="css\style.css">
-  <link rel="stylesheet" href="css\frageboegen.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/frageboegen.css">
 </head>
 <body>
   <header>
@@ -30,10 +30,10 @@
         <div id="fragebogen"></div>
         <button type="button" id="submitButton" class="fragebogen-button">Ergebnis anzeigen</button>
         
-        <!-- Ergebnis -->
+      </form>
+      <!-- Ergebnis -->
       <div id="ergebnis" style="margin-top:20px;"></div>
     </div>
-      </form>
 
   </main>
 
