server.js gelöscht

--- a/html/frageboegen_hautprobleme.html
+++ b/html/frageboegen_hautprobleme.html
@@ -14,7 +14,7 @@
       <a href="index.html">Startseite</a>
       <a href="frageboegen.html">Hauttyp</a>
       <a href="impressum.html">Impressum</a>
-      <a href="frageboegen_hautprobleme.html">Hautprobleme & Prävention</a>
+      <a href="frageboegen_hautprobleme.html">Hautprobleme & Präventionen</a>
     </nav>
   </header>
 
