Remove outdated links to questionnaires and update button navigation for skin problems

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,6 @@
     <div class="logo">Care4Skin</div>
     <nav>
       <a href="index.html">Startseite</a>
-      <a href="frageboegen.html">Fragebögen</a>
       <a href="impressum.html">Impressum</a>
     </nav>
   </header>
@@ -34,7 +33,7 @@
     <div class="karte">
       <h2>Hautprobleme & Prävention</h2>
       <p>Erhalte Tipps zu Hautproblemen und Prävention.</p>
-      <button onclick="location.href='frageboegen.html'">Fragebogen beginnen</button>
+      <button onclick="location.href='frageboegen_hautprobleme.html'">Fragebogen beginnen</button>
     </div>
   </section>
 
