--- a/html/frageboegen_hautprobleme.html
+++ b/html/frageboegen_hautprobleme.html
@@ -12,9 +12,8 @@
     <div class="logo">Care4Skin</div>
     <nav>
       <a href="index.html">Startseite</a>
-      <a href="frageboegen.html">Hauttyp</a>
+      <a >DSGVO</a>
       <a href="impressum.html">Impressum</a>
-      <a href="frageboegen_hautprobleme.html">Hautprobleme & Präventionen</a>
     </nav>
   </header>
 
