Enhance backend API and frontend styles for improved functionality and user experience

--- a/html/frageboegen.html
+++ b/html/frageboegen.html
@@ -2,17 +2,17 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hauttyp Analyse - Care4Skin</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/frageboegen.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Dieser Code sorgt dafür, dass eine Webseite auf dem Smartphone korrekt angezeigt wird, ohne dass man zoomen muss. -->
+  <title>Hauttyp Analyse - Care4Skin</title> <!-- Titel der Seite -->
+  <link rel="stylesheet" href="css/style.css"> <!-- Neue CSS-Datei für Fragebögen -->
+  <link rel="stylesheet" href="css/frageboegen.css"> <!-- Gemeinsame CSS-Datei für Fragebögen -->
 </head>
 <body>
   <header>
-    <div class="logo">Care4Skin</div>
+    <div class="logo">Care4Skin</div> <!-- Logo bleibt gleich -->
     <nav>
-      <a href="index.html">Startseite</a>
-      <a href="impressum.html">Impressum</a>
+      <a href="index.html">Startseite</a> <!-- Link zur Startseite -->
+      <a href="impressum.html">Impressum</a> <!-- Link zum Impressum -->
     </nav>
   </header>
 
@@ -25,13 +25,13 @@
       <button id="startButton" class="fragebogen-button">Fragen anzeigen</button>
 
       <!-- Fragenformular -->
-      <form id="fragebogenForm" style="display:none;">
-        <div id="fragebogen"></div>
-        <button type="button" id="submitButton" class="fragebogen-button">Ergebnis anzeigen</button>
+      <form id="fragebogenForm" style="display:none;"> <!-- Formular für die Fragen, zunächst ausgeblendet -->
+        <div id="fragebogen"></div> <!-- Container für die Fragen -->
+        <button type="button" id="submitButton" class="fragebogen-button">Ergebnis anzeigen</button> <!-- Button zum Anzeigen des Ergebnisses -->
         
       </form>
       <!-- Ergebnis -->
-      <div id="ergebnis" style="margin-top:20px;"></div>
+      <div id="ergebnis" style="margin-top:20px;"></div> <!-- Container für das Ergebnis -->
     </div>
 
   </main>
