--- a/html/frageboegen_hautprobleme.html
+++ b/html/frageboegen_hautprobleme.html
@@ -3,45 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hautprobleme & Prävention - Care4Skin</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/frageboegen.css">
+  <title>Hautprobleme & Prävention - Care4Skin</title> 
+  <link rel="stylesheet" href="css/style.css"> <!-- Neue CSS-Datei für Fragebögen -->
+  <link rel="stylesheet" href="css/frageboegen.css"> <!-- Gemeinsame CSS-Datei für Fragebögen -->
 </head>
 <body>
   <header>
-    <div class="logo">Care4Skin</div>
+    <div class="logo">Care4Skin</div> <!--  Logo bleibt gleich -->
     <nav>
-      <a href="index.html">Startseite</a>
+      <a href="index.html">Startseite</a> <!-- Link zur Startseite -->
       <a >DSGVO</a>
-      <a href="impressum.html">Impressum</a>
+      <a href="impressum.html">Impressum</a> <!-- Link zum Impressum -->
     </nav>
   </header>
 
   <main>
-    <div class="frageboegen-container">
-      <h2>Hautprobleme & Prävention</h2>
-      <p>Beantworte die Fragen, um Tipps zu Hautproblemen und Prävention zu erhalten.</p>
+    <div class="frageboegen-container"> <!-- Gemeinsamer Container-Stil für Fragebögen -->
+      <h2>Hautprobleme & Prävention</h2> <!-- Titel des Fragebogens -->
+      <p>Beantworte die Fragen, um Tipps zu Hautproblemen und Prävention zu erhalten.</p> <!-- Beschreibung des Fragebogens -->
 
       <!-- Start-Button -->
-      <button id="startButton" class="fragebogen-button">Fragen anzeigen</button>
+      <button id="startButton" class="fragebogen-button">Fragen anzeigen</button> <!-- Button zum Starten des Fragebogens -->
 
       <!-- Fragenformular -->
-      <form id="fragebogenForm" style="display:none;">
-        <div id="fragebogen"></div>
-        <button type="button" id="submitButton" class="fragebogen-button">Ergebnis anzeigen</button>
+      <form id="fragebogenForm" style="display:none;"> <!-- Formular für die Fragen, zunächst ausgeblendet -->
+        <div id="fragebogen"></div> <!-- Container für die Fragen --> 
+        <button type="button" id="submitButton" class="fragebogen-button">Ergebnis anzeigen</button> <!-- Button zum Anzeigen des Ergebnisses -->
         
       </form>
       <!-- Ergebnis -->
-      <div id="ergebnis" style="margin-top:20px;"></div>
+      <div id="ergebnis" style="margin-top:20px;"></div> <!-- Container für das Ergebnis -->
     </div>
 
   </main>
 
   <footer>
-    <p>&copy; 2025 Care4Skin | <a href="impressum.html">Impressum</a></p>
+    <p>&copy; 2025 Care4Skin | <a href="impressum.html">Impressum</a></p> <!-- Footer mit Impressum-Link (unten auf seite) -->
   </footer>
 
   <!-- JS am Ende laden -->
-  <script src="js/frageboegen_hautprobleme.js"></script>
+  <script src="js/frageboegen_hautprobleme.js"></script> <!-- Neue JS-Datei für Hautprobleme-Fragebogen -->
 </body>
 </html>
