--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,9 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Care4Skin - Startseite</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsives Design für mobile Geräte -->
+  <title>Care4Skin - Startseite</title> <!-- Titel der Startseite -->
+  <link rel="stylesheet" href="css/style.css"> <!-- Haupt-CSS-Datei -->
 </head>
 <body>
   <!-- Header -->
@@ -23,17 +23,17 @@
   </section>
 
   <!-- Auswahl-Karten -->
-  <section class="auswahl-container">
+  <section class="auswahl-container"> <!-- Container für die Auswahl-Karten -->
     <div class="karte">
-          <h2>Hauttyp<br>Analyse</h2>
-      <p>Finde heraus, welcher Hauttyp du bist.</p>
+          <h2>Hauttyp<br>Analyse</h2> <!-- Titel der Karte mit Zeilenumbruch -->
+      <p>Finde heraus, welcher Hauttyp du bist.</p> <!-- Beschreibung der Karte -->
       <p> </p>
-      <button onclick="location.href='frageboegen.html'">Fragebogen beginnen</button>
+      <button onclick="location.href='frageboegen.html'">Fragebogen beginnen</button> <!-- Button zum Starten des Fragebogens -->
     </div>
     <div class="karte">
       <h2>Hautprobleme & Prävention</h2>
       <p>Erhalte Tipps zu Hautproblemen und Prävention.</p>
-      <button onclick="location.href='frageboegen_hautprobleme.html'">Fragebogen beginnen</button>
+      <button onclick="location.href='frageboegen_hautprobleme.html'">Fragebogen beginnen</button> <!-- Button zum Starten des Fragebogens -->
     </div>
   </section>
 
