Meine lokalen Änderungen

--- a/html/frageboegen_hautprobleme.html
+++ b/html/frageboegen_hautprobleme.html
@@ -12,8 +12,8 @@
     <div class="logo">Care4Skin</div> <!--  Logo bleibt gleich -->
     <nav>
       <a href="index.html">Startseite</a> <!-- Link zur Startseite -->
-      <a >DSGVO</a>
       <a href="impressum.html">Impressum</a> <!-- Link zum Impressum -->
+      <a href="https://www.spengergasse.at/?page_id=2029">DSVGO</a>
     </nav>
   </header>
 
