--- a/html/impressum.html
+++ b/html/impressum.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Impressum - Care4Skin</title>
   <link rel="stylesheet" href="css/style.css">
+  
 </head>
 <body>
   <header>
@@ -12,6 +13,7 @@
     <nav>
       <a href="index.html">Startseite</a>
       <a href="impressum.html">Impressum</a>
+      <a href="https://www.spengergasse.at/?page_id=2029">DSVGO</a>
     </nav>
   </header>
 
