--- a/html/frageboegen.html
+++ b/html/frageboegen.html
@@ -13,6 +13,7 @@
     <nav>
       <a href="index.html">Startseite</a> <!-- Link zur Startseite -->
       <a href="impressum.html">Impressum</a> <!-- Link zum Impressum -->
+      <a href="https://www.spengergasse.at/?page_id=2029">DSVGO</a>
     </nav>
   </header>
 
