--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
     <nav>
       <a href="index.html">Startseite</a>
       <a href="impressum.html">Impressum</a>
+      <a href="https://www.spengergasse.at/?page_id=2029">DSVGO</a>
     </nav>
   </header>
 
