--- a/survey.html
+++ b/survey.html
@@ -4,12 +4,13 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Care4Skin — Fragebogen</title>
-<link rel="stylesheet" href="assets/styles.css">        <!-- Startseite CSS -->
-<link rel="stylesheet" href="assets/styles_survey.css"> <!-- Survey-spezifisches CSS -->
+
+<link rel="stylesheet" href="assets/styles.css">
+<link rel="stylesheet" href="assets/styles_survey.css">
 </head>
+
 <body class="survey-page">
 
-<!-- Header -->
 <header>
   <div class="logo">Care4Skin</div>
   <nav>
@@ -19,29 +20,30 @@
   </nav>
 </header>
 
-<!-- Container -->
 <div class="container">
 
-  <!-- Info-Kasten -->
   <div class="survey-info">
     <h2>Hauttyp Fragebogen</h2>
-    <p>Beantworte die Fragen, um deinen Hauttyp zu ermitteln und Tipps zu erhalten.</p>
+    <p>Beantworte die Fragen, um deinen Hauttyp zu ermitteln.</p>
   </div>
 
-  <!-- Fragen werden hier generiert -->
-  <div id="questions-server-rendered"></div>
+  <!-- WICHTIG: EIN echtes Form -->
+  <form id="survey-form" data-survey="skin">
 
-  <!-- Ergebnisbereich -->
+    <div id="questions-server-rendered"></div>
+
+    <button type="submit" class="survey-btn">
+      Ergebnis anzeigen
+    </button>
+
+  </form>
+
+  <!-- Ergebnis -->
   <div id="survey-result"></div>
 
-  <!-- Submit Button -->
-  <div style="text-align:center; margin-top:24px;">
-    <button type="submit" class="survey-btn">Ergebnis anzeigen</button>
-  </div>
 </div>
 
-
-
 <script src="assets/app.js" defer></script>
+<script src="assets/calculate_points.js" defer></script>
 </body>
 </html>
