kleine verbesserungen an impressum und header vorgenommen logo hinzugefügt header fixiert DSVGO link hinzugefügt

--- a/impressum.html
+++ b/impressum.html
@@ -36,7 +36,7 @@
   <!-- NUR DIE LETZTEN ZWEI ALS POPUPS -->
   <section class="popup-row">
 
-    <div class="karte">
+    <div class="karte3">
       <h2>Kontakt</h2>
       <p>
         HTL Spengergasse<br>
@@ -49,7 +49,7 @@
       </p>
     </div>
 
-    <div class="karte">
+    <div class="karte3">
       <h2>Projektteam</h2>
       <p>Hümeyra Emiroglu – Projektleitung</p>
       <p>Beyza Ersen – Projektmitglied</p>
