--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <!-- Header mit Navigation -->
 <header>
-  <div class="logo">Care4Skin</div>
+  <div class="logo"><img src="T2_logo_v01.png" alt="Care4Skin Logo">
+    </div>
   <nav>
     <a href="index.html">Startseite</a>
-    <a href="#">DSGVO</a>
+    <a href="https://www.spengergasse.at/?page_id=2029">DSVGO</a>
     <a href="impressum.html">Impressum</a>
   </nav>
 </header>
@@ -44,7 +45,7 @@
 <!-- Footer -->
 <footer>
   <p>&copy; 2025 Care4Skin. Alle Rechte vorbehalten.</p>
-  <p><a href="impressum.html">Impressum</a> | <a href="#">DSGVO</a></p>
+  <p><a href="impressum.html">Impressum</a> | <a href="https://www.spengergasse.at/?page_id=2029">DSGVO</a></p>
 </footer>
 
 </body>
