--- a/survey.html
+++ b/survey.html
@@ -11,10 +11,11 @@
 
 <!-- Header -->
 <header>
-  <div class="logo">Care4Skin</div>
+  <div class="logo"><img src="T2_logo_v01.png" alt="Care4Skin Logo">
+    </div>
   <nav>
     <a href="index.html">Startseite</a>
-    <a href="#">DSGVO</a>
+    <a href="https://www.spengergasse.at/?page_id=2029">DSVGO</a>
     <a href="impressum.html">Impressum</a>
   </nav>
 </header>
