bei impressum.html DSVGO-link hinzugefügt

--- a/impressum.html
+++ b/impressum.html
@@ -15,6 +15,7 @@
     </div>
   <nav>
     <a href="index.html">Startseite</a>
+    <a href="https://www.spengergasse.at/?page_id=2029">DSVGO</a>
     <a href="impressum.html">Impressum</a>
   </nav>
 </header>
