Ergebnisbalken bearbeitet, Header im index.html gefixt, impressum text verbessert

--- a/impressum.html
+++ b/impressum.html
@@ -26,12 +26,9 @@
   <h1>Impressum</h1>
 
   <p class="school-text">
-    Diese Website wurde im Rahmen eines Schulprojekts an der
-    HTL Spengergasse erstellt und dient ausschließlich
-    zu Ausbildungszwecken.
-    Interaktive Webanwendung zur Hautanalyse auf Basis eines Fragebogens.
-    Nutzerinnen und Nutzer erhalten individuelle Pflegeempfehlungen
-    abhängig von ihren Antworten.
+    Diese Website wurde im Rahmen eines Schulprojekts an der HTL Spengergasse erstellt und dient ausschließlich zu Ausbildungszwecken.
+    Die interaktive Webanwendung bietet zwei Fragebögen zur Hauttypanalyse sowie zu Hautproblemen und Prävention.
+    Nutzerinnen und Nutzer erhalten auf Grundlage ihrer Angaben individuelle Pflegeempfehlungen.
   </p>
 
   <!-- NUR DIE LETZTEN ZWEI ALS POPUPS -->
